Frontend WIP Заставил работать отвратительно выглядящую табличку. Пока что занимаюсь функционалом, потому о красоте пока можно забыть. Фильтры работают, ссылка на страницу добавления работает. Просмотр товара и удаление товара не работает, работы еще много

--- a/src/main/resources/templates/NewProductPage.html
+++ b/src/main/resources/templates/NewProductPage.html
@@ -6,6 +6,6 @@
 </head>
 <nav th:replace="fragments/head.html :: navpanel"></nav>
 <body>
-    <h3>This is users page</h3>
+    <h3>This is product panel</h3>
 </body>
 </html>
