--- a/src/main/resources/templates/ProductPage.html
+++ b/src/main/resources/templates/ProductPage.html
@@ -6,6 +6,6 @@
 </head>
 <nav th:replace="fragments/head.html :: navpanel"></nav>
 <body>
-    <h3>This is users page</h3>
+    <h3>This is product panel</h3>
 </body>
 </html>
