Done homework at 18:17 MSK 18.10.22 Конкретно по текущей домашке здесь только репозиторий aspect. В нем я не нашел прямо идеального решения, потому просто заинжектил сервисы в AppLoggingAspect и для эндпоинта /statistic сделал вывод сточек с временем отработки всех get-запросов(удаление/ обновление/ добавление проигнорировал, чтобы не накосячить с БД). Долг по старой ДЗ - заставил метод добавления товара в корзину работать нормально, добавил полностью рабочий метод добавления заказа, но наткнулся на проблему: перечитал множество статей про работу с timestamp в БД, но, к сожалению, мне просто не хватило мозгов понять, как грамотно обработать запрос: БД сохраняет в формате +3:00,но искать по себе не дает, да и возвращает в формате -3:00. Могли бы вы дать объяснения на тему как грамотно передать данные в моей ситуации(OrderService метод createOrder близ TODO) или хотя бы дать ссылку на видео или статью с полезной ин-фой на тему, если не сложно? Если не брать в расчет недочет, что в данный момент поиск, по понятным причинам, происходит только по id пользователя и финальной стоимости, вроде это всё, что требовалось сдать в предыдущей ДЗ(т.к. удаление было полностью готово уже тогда) По поводу невозможности добавить два одинаковых товара: собирался добавить строчку с количеством продукта и слегка изменить логику для взаимодействия с этим параметром в будущем

--- a/src/main/resources/templates/UserPage.html
+++ b/src/main/resources/templates/UserPage.html
@@ -55,14 +55,17 @@
     <div>
     <h3 align="center">Cart</h3>
     <table cellspacing="5" align="center">
-        <thead>
+        <thead align="center">
             <td>id</td>
             <td>title</td>
             <td>cost</td>
             <td>currency</td>
             <td>actions</td>
         </thead>
-        <tbody>
+        <tfoot align="right">
+            <tr><td><span th:text="${total_cost}"></span></td></tr>
+        </tfoot>
+        <tbody align="center">
         <tr th:each="item : ${cart_items}">
             <td><span th:text="${item.id}"></span></td>
             <td><span th:text="${item.title}"></span></td>
@@ -77,11 +80,19 @@
         </tbody>
     </table>
         <form action="#" th:action="@{cart/add}" method="post" th:align="center">
-            <input type="text" id="cartId" name="cartId" th:placeholder="*{cart_id}" th:value="cartId">
+            <input type="text" id="cartId" name="cartId" th:placeholder="${cart_id}" th:value="cartId">
             <input type="text" id="itemId" name="itemId" placeholder="itemId" th:value="itemId">
             <button type="submit">addById</button>
         </form>
         </div>
+    <div>
+        <form action="#" th:action="@{cart/createOrder}" method="post" th:align="center">
+            <input type="hidden" id="createCartCartId" name="cartId" th:value="${cart_id}">
+            <input type="hidden" id="createCartUserId" name="userId" th:value="${user.id}">
+            <input type="hidden" id="createCartTotalCost" name="totalCost" th:value="${total_cost}">
+            <button type="submit">Create an order</button>
+        </form>
+    </div>
     <div>
     <h1 align="center">Update user</h1>
         <div th:align="center">
